index.css
body,html{
	margin:0;
	overflow-x: hidden;
	font-family: 'Montserrat';
}

		/* NAVBAR */

		.btn {
			background-color: transparent;
			color: white;
			border: 0px solid transparent;
			padding: 10px;
			font-size: 1.2em;
		}
		
		.navbar {
			height: 0px;
			background-color: transparent;
			border: none;
			color: white;
			z-index: 100;
			transition: background-color 1s ease 0s;
		}
		.navbar-default .navbar-brand {
			margin-top:0px;
			vertical-align:middle;
			color:transparent;
		}
		
		
		.navbar-default .navbar-brand:hover {
			color:transparent;
			border: 1px solid transparent;
		}
		
		.logo-image img
		{
			
			height:6.5vh;
			
			margin-top:-17px;
		
		}
		
		.navbar-default .navbar-nav > li > a {
			color: white;
		
			vertical-align:middle;
		}
		.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-nav > li > a:focus {
			color: #f9f5fa;
			border: 0px solid transparent;
		}
		
		
		.navbar-default .navbar-nav > li > a:visited {
			
			text-decoration: none;
		
		}
		
		
		.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
			background-color: transparent;
			color: black;
		}
		.navbar-default .navbar-toggle {
			border-color: transparent;
			width:7.2vh;
			color:white;
		}
		.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
			background-color: transparent;
		}
		.navbar-default .navbar-toggle .icon-bar {
			color: black;
			background-color: orange;
		}
		.navbar-default .navbar-collapse.collapse.in ul {
			color:black;
			background-color: white;
			margin-top:0px;
			position: relative;
		
		}
		.collapsed {
			
			
			height: 031px;
			overflow: hidden;
			-webkit-transition: height .01s ease;
			-moz-transition: height .01s ease;
			-o-transition: height .01s ease;
			transition: height .01s ease;
		  }
		.navbar-collapse
		{
			
			overflow: hidden;
			-webkit-transition: height .001s ease;
			-moz-transition: height .001s ease;
			-o-transition: height .001s ease;
			transition: height .001s ease;
		
		}
		@media screen and (max-width: 736px) {
			.navbar-default .navbar-nav > li > a:visited {
				color: black;
				text-decoration: none;
				
			
			}
			.navbar-default .navbar-nav > li > a {
				color: black;
			
				vertical-align:middle;
			}
		
			.logo-image
		{
			width:10.5vh;
			height:20px;
			
			border-radius:50%;
			margin-top:8px;
		}
		
			
			
			}
			@media screen and (min-width: 768px) {
				.logo-image
				{
					width:5vh;
					
					
					border-radius:50%;
					margin-top:-2px;
				}
				#nav
				{
					height: 5.6vh;
					font-size: 17px;
				}
				
				}
		/* Solid class attached on scroll past first section */
		.navbar.solid {
			background-color: white;
			transition: background-color 1s ease 0s;
			box-shadow: 0 0 4px grey;
		}
		.navbar.solid .navbar-brand {
			color: black;
			transition: color 1s ease 0s;
		}
		.navbar.solid .navbar-nav > li > a {
			
			color:black;
			transition: color 1s ease 0s;
		}
					
			
			

						/* LANDING */
						


.landingtitle{
	font-size: 10vh;
	font-family: 'Montserrat';
	display: none;

}

.topExcel{
	display: grid	;
	justify-content: center;
	align-items: center;
}

.logoimg{

	/* margin-top: 2vh; */
	max-width: 75vh;  
	/* border-radius: 59%; */
	margin-top: 2vh;
	/* border-radius: 59%; */

	/* height: auto; */
	/* display: none; */
}
@media (min-width: 1245px) and (max-width: 1800px) {
	.logoimg{
		margin-top:-70px;
	}
	.topExcel{
		display: grid	;
		justify-content: center;
		align-items: center;
		margin-bottom:50px;
	}
}

#header {
    background-attachment: scroll,							scroll,					fixed;
    background-image: url("images/top-3200.svg"), url("images/index.png"), url("images/header.jpg");
    background-position: bottom center,					top left,				center center;
    background-repeat: repeat-x,						repeat,					no-repeat;
    background-size: 3200px 460px,					auto,					cover;
    color: rgba(255, 255, 255, 0.8);
    padding: 10em 0 20em 0;
    position: relative;
    text-align: center;
    height:100vh;
		width: 100vw;
		/* background: red; */
}

    #header:before, #header:after {
				/* background: rgba(224, 224, 224, 0.75); */
				/* background: black; */

        content: '';
        left: 50%;
        position: absolute;
        width: 1px;
        z-index: 0;
    }

    #header:before {
        height: calc(100% - 50px);
        opacity: 0.15;
        top: 0;
    }

    #header:after {
        bottom: 0;
        height: 50px;
    }

    #header a {
				border-bottom-color: rgba(255, 255, 255, 0.35);
				
				/* background: black; */

        color: white;
    }

        #header a:hover {
            border-bottom-color: transparent;
						color: white;
						text-decoration: none;	
        }

    #header strong, #header b {
        color: #ffffff;
    }

    #header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
        color: #ffffff;
    }

    #header input[type="submit"],
    #header input[type="reset"],
    #header input[type="button"],
    #header .button {
        background: #ffffff;
        color: #544d55;
    }

    #header .logo {
        background: white;
        border-radius: 100%;
        color: #ffffff;
        cursor: default;
        display: inline-block;
        font-size: 2.25em;
        height: 2.35em;
        line-height: 2.35em;
        margin: 0 0 0.75em 0;
        text-align: center;
        width: 2.35em;
    }

        #header .logo.fa-paper-plane-o:before {
            left: -0.075em;
            position: relative;
        }

    #header h1 {
        font-size: 2.5em;
        margin: 0;
    }

    #header p {
        font-size: 1.5em;
        line-height: 1.5em;
        margin: 0.25em 0 0 0;
    }

		@media screen and (max-width: 1850px) {
			.logoimg{
				margin-top: 0vh;
				max-width:40%;
			}
		}
/* ... */

